[Zellij] Start locked.

--- a/templates/zellij/config.yaml.j2
+++ b/templates/zellij/config.yaml.j2
@@ -438,7 +438,6 @@ plugins:
 
 # Choose the path to the default shell that zellij will use for opening new panes
 # Default: $SHELL
-#default_shell: fish
 default_shell: {{ nvim_shell }}
 
 # Toggle between having pane frames around the panes
@@ -453,7 +452,7 @@ default_shell: {{ nvim_shell }}
 
 # Choose the mode that zellij uses when starting up.
 # Default: normal
-#default_mode: locked
+default_mode: locked
 
 # Toggle enabling the mouse mode.
 # On certain configurations, or terminals this could
