[Neovim] Enable powerline symbols in airline.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -96,6 +96,7 @@ vim.o.completeopt = 'menuone,noselect'
 -- Set statusbar
 -- require('user_statusline')
 vim.g['airline#extensions#tabline#enabled'] = 1
+vim.g.airline_powerline_fonts = 1
 
 -- Set Tabline
 -- require("bufferline").setup{}
