[Neovim] Fix syntax.

--- a/templates/nvim/lua/user_toggleterm.lua.j2
+++ b/templates/nvim/lua/user_toggleterm.lua.j2
@@ -24,7 +24,7 @@ require("toggleterm").setup{
   float_opts = {
     border = 'curved'
     width = 5,
-    height = 4>,
+    height = 4,
     winblend = 3,
     highlights = {
       border = "Normal",
