--- a/templates/nvim/lua/user_toggleterm.lua.j2
+++ b/templates/nvim/lua/user_toggleterm.lua.j2
@@ -22,7 +22,7 @@ require("toggleterm").setup{
   shell = vim.o.shell, -- change the default shell
   -- This field is only relevant if direction is set to 'float'
   float_opts = {
-    border = 'curved'
+    border = 'curved',
     width = 5,
     height = 4,
     winblend = 3,
