[Neovim] Fix asyncrunner setting.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -364,6 +364,7 @@ require("winshift").setup({
 -- Task Settings
 vim.g.asyncrun_open = 6
 vim.g.asynctasks_term_pos = 'toggleterm'
+vim.g.asynctasks_term_reuse = 1
 
 -- Terminal Settings
 require('user_toggleterm')
