[Zsh,Navi] Use Ctrl-a for navi widget.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -70,7 +70,7 @@ _navi_widget() {
 }
 
 zle -N _navi_widget
-bindkey '^q' _navi_widget
+bindkey '^a' _navi_widget
 # source {{ dotfiles_home }}/roles/zsh/files/aliases.zsh
 # source {{ dotfiles_home }}/roles/erlang/files/erlang.zsh
 # source {{ dotfiles_home }}/roles/docker/files/docker.zsh
