[Neovim] Add lazygit plugin.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -61,6 +61,7 @@ require('packer').startup(function()
   use 'sindrets/winshift.nvim'
   -- Terminal Plugins
   use {"akinsho/toggleterm.nvim"}
+  use 'kdheepak/lazygit.nvim'
   -- Task Runner
   use { 'skywind3000/asynctasks.vim',
     requires = { 'skywind3000/asyncrun.vim', 'skywind3000/asyncrun.extra' }
