--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -26,6 +26,7 @@ nnoremap("<leader>wl", "<Cmd>WinShift right<CR>", "silent", "WinShift: Shift Spl
 -- Terminal Mappings
 m.nname("<leader>s", "ToggleTerm")
 tnoremap("<C-/>", "<Cmd>ToggleTerm<CR>", "silent", "ToggleTerm: Toggle Terminal")
+tnoremap("<leader>sg", "<Cmd>LazyGit<CR>", "silent", "ToggleTerm: Lazygit")
 
 -- Base Telescope Mappings
 nnoremap(":", "<cmd>lua require('telescope.builtin').commands()<CR>", "silent", "Telescope: View Commands")
