[Neovim] Set python host program.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -83,6 +83,9 @@ end)
 -- Set Shell
 vim.o.shell = "{{ nvim_shell }}"
 
+-- Set Python Interpreter
+vim.o.python3_host_prog = "{{ nix_bin }}/nvim-python3"
+
 -- Set highlight on search
 vim.o.hlsearch = true
 
