--- a/templates/nvim/lua/user_toggleterm.lua.j2
+++ b/templates/nvim/lua/user_toggleterm.lua.j2
@@ -1,10 +1,8 @@
 -- Toggleterm Config
 require("toggleterm").setup{
-  -- size can be a number or function which is passed the current terminal
---size = 20
-  function(term)
+  size = function(term)
     if term.direction == "horizontal" then
-      return 40
+      return 25
     elseif term.direction == "vertical" then
       return vim.o.columns * 0.4
     end
