[Neovim,Ranger] Add rnvimr settings.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -368,6 +368,9 @@ vim.g.asyncrun_open = 6
 vim.g.asynctasks_term_pos = 'toggleterm'
 vim.g.asynctasks_term_reuse = 1
 
+-- Ranger/Rnvimr Settings
+require('user_rnvimr')
+
 -- Terminal Settings
 require('user_toggleterm')
 
