--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -22,8 +22,16 @@ export PATH=$PATH:{{ bin_directory }}
 
 ###############################################################################
 # BEGIN: Environment
-export EDITOR={{ nix_bin }}/nvim
-export VISUAL={{ nix_bin }}/nvim
+if [ -n "$NVIM_LISTEN_ADDRESS" ]; then
+    alias nvim={{ nix_bin }}/nvr -cc split --remote-wait +'set bufhidden=wipe'
+fi
+if [ -n "$NVIM_LISTEN_ADDRESS" ]; then
+    export VISUAL="{{ nix_bin }}/nvr -cc split --remote-wait +'set bufhidden=wipe'"
+    export EDITOR="{{ nix_bin }}/nvr -cc split --remote-wait +'set bufhidden=wipe'"
+else
+    export VISUAL="{{ nix_bin }}/nvim"
+    export EDITOR="{{ nix_bin }}/nvim"
+fi
 # END: Environment
 ###############################################################################
 
