[Neovim] Add FTerm plugin

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -60,7 +60,8 @@ require('packer').startup(function()
   -- Split/Window Management
   use 'sindrets/winshift.nvim'
   -- Terminal Plugins
-  use {"akinsho/toggleterm.nvim"}
+  use 'akinsho/toggleterm.nvim'
+  use 'numToStr/FTerm.nvim'
   use 'kevinhwang91/rnvimr'
   use 'kdheepak/lazygit.nvim'
   -- Task Runner
