[Neovim] Remove unnecessary setup call.

--- a/templates/nvim/lua/user_toggleterm.lua.j2
+++ b/templates/nvim/lua/user_toggleterm.lua.j2
@@ -44,4 +44,4 @@ end
 vim.cmd('autocmd! TermOpen term://* lua set_terminal_keymaps()')
 
 -- FTerm Config
-require("FTerm").setup()
+-- require("FTerm").setup() -- not necessary according to plugin
