--- a/templates/nvim/lua/user_toggleterm.lua.j2
+++ b/templates/nvim/lua/user_toggleterm.lua.j2
@@ -21,7 +21,7 @@ require("toggleterm").setup{
   float_opts = {
     border = 'curved',
     width = vim.o.columns * 0.8,
-    height = vim.o.rows * 0.8,
+    height = vim.o.lines * 0.8,
     winblend = 3,
     highlights = {
       border = "Normal",
