--- a/templates/nvim/lua/user_toggleterm.lua.j2
+++ b/templates/nvim/lua/user_toggleterm.lua.j2
@@ -20,8 +20,8 @@ require("toggleterm").setup{
   shell = vim.o.shell,
   float_opts = {
     border = 'curved',
-    width = vim.o.columns * 0.8,
-    height = vim.o.lines * 0.8,
+    width = 140,
+    height = vim.o.lines * 60,
     winblend = 3,
     highlights = {
       border = "Normal",
