--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -60,6 +60,11 @@ require('packer').startup(function()
   -- Split/Window Management
   use 'sindrets/winshift.nvim'
   -- Terminal Plugins
+  use { 'voldikss/vim-floaterm',
+    requires = {
+      'voldikss/fzf-floaterm'
+    }
+  }
   use 'akinsho/toggleterm.nvim'
   use 'numToStr/FTerm.nvim'
   use 'kevinhwang91/rnvimr'
