--- a/templates/nvim/lua/user_toggleterm.lua.j2
+++ b/templates/nvim/lua/user_toggleterm.lua.j2
@@ -3,7 +3,7 @@ vim.g.floaterm_width = 0.9
 vim.g.floaterm_height = 0.9
 vim.g.floaterm_position = 'center'
 vim.g.floaterm_autoclose = 1
-vim.g.floaterm_autoinsert = v:true
+vim.g.floaterm_autoinsert = true
 vim.g.floaterm_opener = 'tabe'
 vim.g.floaterm_keymap_toggle = '<C-\>'
 vim.cmd [[hi FloatermBorder guibg=gray guifg=black]]
