[Neovim] Add fzf.vim

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -62,7 +62,8 @@ require('packer').startup(function()
   -- Terminal Plugins
   use { 'voldikss/vim-floaterm',
     requires = {
-      'voldikss/fzf-floaterm'
+      'voldikss/fzf-floaterm',
+      'junegunn/fzf.vim'
     }
   }
   use 'akinsho/toggleterm.nvim'
