--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -64,6 +64,7 @@ require('packer').startup(function()
     requires = {
       'voldikss/fzf-floaterm',
       'junegunn/fzf.vim'
+      'junegunn/fzf', run = ':call fzf#install()'
     }
   }
   use 'akinsho/toggleterm.nvim'
