[Neovim] Fix syntax error.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -63,7 +63,7 @@ require('packer').startup(function()
   use { 'voldikss/vim-floaterm',
     requires = {
       'voldikss/fzf-floaterm',
-      'junegunn/fzf.vim'
+      'junegunn/fzf.vim',
       'junegunn/fzf', run = ':call fzf#install()'
     }
   }
