[Neovim] Add multiterm.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -67,6 +67,7 @@ require('packer').startup(function()
       'junegunn/fzf', run = ':call fzf#install()'
     }
   }
+  use 'chengzeyi/multiterm.vim'
   use 'akinsho/toggleterm.nvim'
   use 'numToStr/FTerm.nvim'
   use 'kevinhwang91/rnvimr'
