--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -29,7 +29,7 @@ require('packer').startup(function()
   }
   use {'akinsho/bufferline.nvim', requires = 'kyazdani42/nvim-web-devicons'}
   -- Theme
-  use 'morhetz/gruvbox'
+  use { "ellisonleao/gruvbox.nvim" }
   -- Add indentation guides even on blank lines
   use 'lukas-reineke/indent-blankline.nvim'
   -- Add git related info in the signs columns and popups
