--- a/templates/nvim/lua/user_statusline.lua.j2
+++ b/templates/nvim/lua/user_statusline.lua.j2
@@ -8,28 +8,57 @@ local palette = {
   cyan          = '#689d6a',
   white         = '#a89984',
   bright_black  = '#928374',
-  bright_red    = '#fb4934',
-  bright_green  = '#b8bb26',
-  bright_yellow = '#fabd2f',
-  bright_blue   = '#83a598',
-  bright_purple = '#d3869b',
-  bright_cyan   = '#8ec07c',
-  bright_white  = '#ebdbb2',
+  dark0_hard = "#1d2021",
+  dark0 = "#282828",
+  dark0_soft = "#32302f",
+  dark1 = "#3c3836",
+  dark2 = "#504945",
+  dark3 = "#665c54",
+  dark4 = "#7c6f64",
+  light0_hard = "#f9f5d7",
+  light0 = "#fbf1c7",
+  light0_soft = "#f2e5bc",
+  light1 = "#ebdbb2",
+  light2 = "#d5c4a1",
+  light3 = "#bdae93",
+  light4 = "#a89984",
+  bright_red = "#fb4934",
+  bright_green = "#b8bb26",
+  bright_yellow = "#fabd2f",
+  bright_blue = "#83a598",
+  bright_purple = "#d3869b",
+  bright_aqua = "#8ec07c",
+  bright_orange = "#fe8019",
+  neutral_red = "#cc241d",
+  neutral_green = "#98971a",
+  neutral_yellow = "#d79921",
+  neutral_blue = "#458588",
+  neutral_purple = "#b16286",
+  neutral_aqua = "#689d6a",
+  neutral_orange = "#d65d0e",
+  faded_red = "#9d0006",
+  faded_green = "#79740e",
+  faded_yellow = "#b57614",
+  faded_blue = "#076678",
+  faded_purple = "#8f3f71",
+  faded_aqua = "#427b58",
+  faded_orange = "#af3a03",
+  gray = "#928374",
 }
 
 local gruvbox_theme = {
-  line             = {foreground = palette.green, background = palette.black},
-  segment_odd      = {foreground = palette.black, background = palette.purple},
-  segment_even     = {foreground = palette.black, background = palette.green},
-  mode_normal      = {foreground = palette.purple},
-  mode_insert      = {foreground = palette.green},
-  mode_command     = {foreground = palette.blue},
-  mode_visual      = {foreground = palette.yellow},
+  line             = {foreground = palette.dark0, background = palette.black},
+  segment_odd      = {foreground = palette.black, background = palette.dark0},
+  segment_even     = {foreground = palette.black, background = palette.gray},
+  mode_normal      = {foreground = palette.faded_purple},
+  mode_insert      = {foreground = palette.faded_orange},
+  mode_command     = {foreground = palette.faded_blue},
+  mode_visual      = {foreground = palette.faded_yellow},
   mode_visual_line = {foreground = palette.cyan},
-  mode_terminal    = {foreground = palette.red},
+  mode_terminal    = {foreground = palette.faded_red},
   warning          = {foreground = palette.black, background = palette.bright_yellow},
   error            = {foreground = palette.black, background = palette.bright_red},
-  scroll           = {foreground = palette.yellow}
+  scroll           = {foreground = palette.faded_yellow}
 }
 require('vacuumline').setup({
   theme = gruvbox_theme
