[Neovim] Tweak galaxyline.

--- a/templates/nvim/lua/user_statusline.lua.j2
+++ b/templates/nvim/lua/user_statusline.lua.j2
@@ -47,7 +47,7 @@ local palette = {
 }
 
 local gruvbox_theme = {
-  line             = {foreground = palette.dark0_soft, background = palette.black},
+  line             = {foreground = palette.dark0_soft, background = palette.dark0_hard},
   segment_odd      = {foreground = palette.black, background = palette.gray},
   segment_even     = {foreground = palette.black, background = palette.dark0_soft},
   mode_normal      = {foreground = palette.faded_purple},
