[Neovim] Tweak galaxyline.

--- a/templates/nvim/lua/user_statusline.lua.j2
+++ b/templates/nvim/lua/user_statusline.lua.j2
@@ -47,9 +47,9 @@ local palette = {
 }
 
 local gruvbox_theme = {
-  line             = {foreground = palette.dark0_soft, background = palette.dark0_hard},
+  line             = {foreground = palette.gray, background = palette.black},
   segment_odd      = {foreground = palette.black, background = palette.gray},
-  segment_even     = {foreground = palette.black, background = palette.dark0_soft},
+  segment_even     = {foreground = palette.gray, background = palette.dark0_soft},
   mode_normal      = {foreground = palette.faded_purple},
   mode_insert      = {foreground = palette.faded_orange},
   mode_command     = {foreground = palette.faded_blue},
