[Neovim] Add cursorline plugin.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -43,6 +43,8 @@ require('packer').startup(function()
   use 'hrsh7th/cmp-nvim-lsp'
   use 'saadparwaiz1/cmp_luasnip'
   use 'L3MON4D3/LuaSnip' -- Snippets plugin
+  -- Cursorline Plugin
+  use 'yamatsum/nvim-cursorline'
   -- Motion Plugins
   use 'ggandor/lightspeed.nvim'
   -- Start Screen
