--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -96,6 +96,9 @@ vim.o.shell = "{{ nvim_shell }}"
 -- Set Editor
 vim.env.GIT_EDITOR = "{{ nix_bin }}/nvr -cc split --remote-wait +'set bufhidden=wipe'"
 
+-- Cursorline
+vim.g.cursorline_timeout = 200
+
 -- Set highlight on search
 vim.o.hlsearch = true
 
