--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -36,6 +36,8 @@ require('packer').startup(function()
   use { 'lewis6991/gitsigns.nvim', requires = { 'nvim-lua/plenary.nvim' } }
   -- Highlight, edit, and navigate code using a fast incremental parsing library
   use 'nvim-treesitter/nvim-treesitter'
+  -- Better Search Highlighting
+  use 'kevinhwang91/nvim-hlslens'
   -- Additional textobjects for treesitter
   use 'nvim-treesitter/nvim-treesitter-textobjects'
   use 'neovim/nvim-lspconfig' -- Collection of configurations for built-in LSP client
