--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -30,6 +30,7 @@ nnoremap("*", "*<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Curso
 nnoremap("#", "#<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Cursorword In Reverse")
 nnoremap("g*", "g*<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Cursorword Go")
 nnoremap("g#", "g#<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Cursorword Go In Reverse")
+nnoremap("<C-]>", ":noh<CR>", "silent", "HLSLens: Clear Search Result")
 
 -- Terminal Mappings
 m.nname("<leader>s", "Floaterm")
