--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -28,8 +28,8 @@ nnoremap("n", "<Cmd>execute('normal! ' . v:count1 . 'n')<CR><Cmd>lua require('hl
 nnoremap("N", "<Cmd>execute('normal! ' . v:count1 . 'N')<CR><Cmd>lua require('hlslens').start()<CR>", "silent", "HLSLens: Previous Search Result")
 nnoremap("*", "*<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Cursorword")
 nnoremap("#", "#<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Cursorword In Reverse")
-nnoremap("g*", "g*<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Cursorword Go")
-nnoremap("g#", "g#<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Cursorword Go In Reverse")
+nnoremap("g*", "g*<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Nearest Cursorword")
+nnoremap("g#", "g#<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Nearest Cursorword In Reverse")
 nnoremap("<C-]>", ":noh<CR>", "silent", "HLSLens: Clear Search Result")
 
 -- Terminal Mappings
