--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -245,13 +245,21 @@ local capabilities = vim.lsp.protocol.make_client_capabilities()
 capabilities = require('cmp_nvim_lsp').update_capabilities(capabilities)
 
 -- Enable the following language servers
-local servers = { 'clangd', 'rust_analyzer', 'pyright', 'tsserver' }
-for _, lsp in ipairs(servers) do
-  lspconfig[lsp].setup {
-    on_attach = on_attach,
-    capabilities = capabilities,
-  }
-end
+-- local servers = {
+--   'yamllint',
+--   {{ lsp_provider_lspconfig_file or "-- No Extra Lsp Providers Installed" }}
+--   'bash-language-server'
+-- }
+-- 
+-- for _, lsp in ipairs(servers) do
+--   lspconfig[lsp].setup {
+--     on_attach = on_attach,
+--     capabilities = capabilities,
+--   }
+-- end
+require'lspconfig'.ansiblels.setup{}
+require'lspconfig'.bashls.setup{}
+{{ lsp_provider_lspconfig_file or "-- No Extra Lsp Providers Installed" }}
 
 -- Example custom server
 -- Make runtime files discoverable to the server
