--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -1,3 +1,5 @@
+-- Set Python Path
+vim.g.python3_host_prog = '{{ nix_bin }}/nvim-python3'
 -- Install packer
 local install_path = vim.fn.stdpath 'data' .. '/site/pack/packer/start/packer.nvim'
 
